# cellarium-nexus

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.rst  pyproject.toml  pytest.ini  setup.py
.github/actions/docker-build/: action.yaml
.github/actions/poetry-check/: action.yml
.github/workflows/: docker-update-workflow.yaml
cellarium/nexus/: notes
cellarium/nexus/backend/: README.rst  api_urls.py  asgi.py  manage.py  urls.py  wsgi.py
cellarium/nexus/backend/app_modules/: urls.py
cellarium/nexus/backend/application/: app_storages_backend.py  asgi.py  urls.py  wsgi.py
cellarium/nexus/backend/cell_management/: admin.py  apps.py  forms.py  models.py
cellarium/nexus/backend/core/: apps.py
cellarium/nexus/backend/curriculum/: admin.py  apps.py  models.py
cellarium/nexus/backend/ingest_management/: admin.py  apps.py  models.py
cellarium/nexus/backend/settings/: __init__.py  base.py
cellarium/nexus/backend/shared/: admin.py
cellarium/nexus/clients/: README.rst  __init__.py  api_schemas.py  base.py  exceptions.py  nexus_backend_client.py  status_codes.py
cellarium/nexus/coordinator/: __init__.py  bq_data_ops_coordinator.py  constants.py  exceptions.py  ingest_extract_coordinator.py  preprocessing_coordinator.py  soma_data_ops_coordinator.py  soma_ingest_coordinator.py  validation_coordinator.py
cellarium/nexus/nexus_data_controller/: __init__.py  constants.py  nexus_data_controller.py
cellarium/nexus/omics_datastore/: README.rst  controller.py  gc_utils.py  protocols.py  todo_refactor.md
cellarium/nexus/omics_datastore/bq_avro_schemas/: cell_management.py  column_mapping.py  converter.py  custom_types.py
cellarium/nexus/omics_datastore/bq_ops/: __init__.py  bq_datastore_controller.py  constants.py  create_bq_tables.py  data_operator.py  data_validator.py  exceptions.py
cellarium/nexus/omics_datastore/bq_sql/: __init__.py  constants.py  mako_helpers.py  query.py  template_data.py
cellarium/nexus/omics_datastore/soma_ops/: __init__.py  _queries.py  curriculum_grouped.py  curriculum_metadata.py  curriculum_randomized.py  data_ingestor.py  data_operator.py  exceptions.py  extract.py  extract_grouped.py  extract_randomized.py  filters.py  planning.py  utils.py
cellarium/nexus/shared/: __init__.py
cellarium/nexus/shared/schemas/: __init__.py  component_configs.py  omics_datastore.py
cellarium/nexus/shared/utils/: __init__.py  gcp.py  workflows_configs.py  workspace_file_manager.py
cellarium/nexus/utils/: __init__.py
cellarium/nexus/workflows/kubeflow/: __init__.py  component_configs.py  components.py  conf.py  pipelines.py
deploy/: Dockerfile.backend  README.rst  bucket-policy.yaml  cors.json  deploy-cloudrun.sh  docker-entrypoint.sh  setup.sh  start.sh
deploy/backend/: Dockerfile  django_prepare_deploy.sh  docker-entrypoint.sh
deploy/requirements/: backend.lock.txt  workflows.lock.txt
deploy/setup/: deploy-cloudrun.sh  setup.sh
deploy/workflows/: Dockerfile
requirements/: backend.txt  base.txt  pipelines.txt  scripts.txt  shared.txt
staticfiles/cell_management/css/: custom_filters.css
tests/: conftest.py
tests/backend/: conftest.py
tests/backend/application/integration/: test_urls.py
tests/backend/cell_management/integration/: test_admin_views.py  test_cache_reset.py  test_models.py
tests/backend/cell_management/unit/: test_admin_forms.py  test_bigquery_utils.py  (+5 more)
tests/backend/fixtures/: cache.py  data.py  db.py  gcp.py  mocks.py
tests/fixtures/: __init__.py  data_inputs.py  helpers.py  mocks.py  test_env
tests/fixtures/data/: adata_ingest_test_sample-0001.h5ad  adata_ingest_test_sample-0002.h5ad  adata_ingest_test_sample-0003.h5ad
tests/omics_datastore/bq_ops/: fixtures.py
tests/omics_datastore/soma_ops/: conftest.py
(+291 files in other folders)
